# pg_api_muscle

./: .gitignore  Cargo.toml  combination.ini  curl_reload.sh  curl_shutodwn.sh  openapi_ap.json_old  readme.md  sf.json  sf_muscle.ini  todo_next.md
ap/static/: 404.html  index.html
sf/: static
src/: api.rs  cache.rs  config.rs  db.rs  main.rs  main.rsOLD  parameter.rs  request.rs  response.rs
static/: sf
static/ap/css/: test-admin.css
static/ap/submit/: 2021-07-22-backup-submit.js  post-geruest-1.js  submit.html  submit.js
static/ap_alt/js/: 02-testerstellung.js
static/ap_alt/submit/: ae_submit.js  submit.css  tags-cats-context.json
