[package]
name = "pg_api_muscle"
version = "0.1.0"
authors = ["heiko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tini="1.2.0"
tokio-postgres="0.7.0"
jwt-simple = "0.9.4"
urlencoding="1.1.1"
tokio-native-tls="0.3.0"
native-tls="0.2.7"
deadpool-postgres="0.7.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json="1.0"
serde_urlencoded="0.7.0"
log="0.4.11"
env_logger="0.8.1"
tokio={version="1.4.0",features = ["full"]}


# Das benutze ich im Moment nicht
# openapiv3 = "0.3.2"
# futures="0.3.13"
#postgres = "0.19.0"
#base64="0.13.0"
